--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1b2641;
+  /* background-color: #1b2641; */
+  color: black;
+  
 }
 
 code {
