--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,10 @@
 #home{
-    color: white;
+    color: rgb(5, 5, 5);
     margin-top: 25px;
     /* border: 1px solid #f2f2f2; */
     padding: 10rem 0rem;
+    background: rgb(205,125,205);
+    background: radial-gradient(circle, rgba(205, 125, 205, 0.209) 0%, rgba(75, 133, 177, 0.074) 89%, rgba(148, 188, 200, 0.249) 100%);
 }
 .container{
       width: 80%;
