--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -1,82 +1,100 @@
-.projects{
-    border: 1px solid #000;
-    color: white;
-    margin-top: 150px;
-    padding: 5rem;
-    margin-bottom: 10px;
-    border: border-box;
+.projects {
+  /* border: 1px solid #000; */
+  color: rgb(0, 0, 0);
+  /* margin-top: 150px; */
+  padding: 5rem;
+  margin-bottom: 10px;
+  border: border-box;
+  background: rgb(205, 125, 205);
+  background: radial-gradient(
+    circle,
+    rgba(205, 125, 205, 0.209) 0%,
+    rgba(75, 133, 177, 0.074) 89%,
+    rgba(148, 188, 200, 0.249) 100%
+  );
 }
-.container{
-    width: 90%;
-    margin: auto;
-    /* border: 1px solid #a50606; */
-    /* height: 80px; */
+.container {
+  width: 90%;
+  margin: auto;
+  /* border: 1px solid #a50606; */
+  /* height: 80px; */
 }
-.project{
-    display: flex;
-    width: 90%;
-    margin: auto;
+.project {
+  display: flex;
+  width: 90%;
+  margin: auto;
 }
 .project:hover h1 {
-    color: aqua;
+  color: rgb(221, 125, 22);
 }
-.project:hover .techDiv{
-    color: aqua;
+.project:hover .techDiv {
+  color: rgb(221, 125, 22);
 }
 
 /* -------------left start--------- */
-.left1{
-    width: 55%;
+.left1 {
+  width: 55%;
 }
-.imgDiv{
-    height: 500px;
-    overflow: hidden;
+.imgDiv {
+  height: 500px;
+  overflow: hidden;
 }
-.imgDiv img{
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
-   border-radius: 10px;
+.imgDiv img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
 /* -------------left end--------- */
 
-
-
-
 /* -------------right start--------- */
-.right1{
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-    height: 400px;
-    /* border: 1px solid #000; */
-    margin: auto;
-    align-items:end;
-    padding: 10px;
-    justify-content: space-evenly;
+.right1 {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  height: 400px;
+  /* border: 1px solid #000; */
+  margin: auto;
+  align-items: end;
+  padding: 10px;
+  justify-content: space-evenly;
 }
 
-.outer1{
+.outer1 {
+}
+.inner1 {
+  /* background-color: rgb(185, 188, 191); */
+  /* background: rgb(238,174,202);
+background: radial-gradient(circle, rgba(238,174,202,0.6942738765428047) 0%, rgba(148,187,233,0.6718649129573704) 100%); */
+  /* background: rgb(205, 125, 205);
+  background: radial-gradient(
+    circle,
+    rgba(205, 125, 205, 0.47298536113664214) 0%,
+    rgba(75, 133, 177, 0.3273270978313201) 89%,
+    rgba(181, 168, 182, 0.8707444647780987) 100%
+  ); */
+  background: rgba(205, 125, 205, 0.535);
+  background: radial-gradient(
+    circle,
+    rgba(125, 205, 178, 0.203) 0%,
+    rgba(177, 89, 75, 0.17) 89%,
+    rgba(200, 148, 161, 0.315) 100%
+  );
+  margin: 1rem 0rem;
+  margin-left: -6rem;
+  padding: 1.2rem 2rem;
 
+  height: 160px;
+  overflow-y: scroll;
+  display: flex;
+  justify-content: end;
+  text-align: justify;
 }
-.inner1{
-    background-color: rgb(17, 44, 75);
-    margin: 1rem 0rem;
-    margin-left: -6rem;
-    padding: 1.2rem 2rem ;
-    
-    height: 160px;
-    overflow-y: scroll;
-    display: flex;
-    justify-content: end;
-    text-align: justify;
+.description1 {
 }
-.description1{
-
-}
-.techDiv{
-    display: flex;
-    gap: 1rem;
+.techDiv {
+  display: flex;
+  gap: 1rem;
 }
 
 /* -------------right end--------- */
