--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -1,8 +1,10 @@
 .skillsContainer{
-    color: white;
-    margin-top: 25px;
+    color: rgb(0, 0, 0);
+    /* margin-top: 25px; */
     border: 1px solid #f2f2f2;
     padding: 10rem 0rem;
+    background: rgb(205,125,205);
+    background: radial-gradient(circle, rgba(205, 125, 205, 0.145) 0%, rgba(75, 133, 177, 0.074) 89%, rgba(148, 188, 200, 0.249) 100%);
 }
 .container{
     display: grid;
