--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,40 +1,66 @@
-.about2{
-    color: rgb(0, 0, 0);
-    /* margin-top: 25px; */
-    border: 1px solid #f2f2f2;
-    padding: 10rem 0rem;
-    background: rgb(205,125,205);
-    background: radial-gradient(circle, rgba(205, 125, 205, 0.209) 0%, rgba(75, 133, 177, 0.074) 89%, rgba(148, 188, 200, 0.249) 100%);
+.about2 {
+  color: rgb(0, 0, 0);
+  /* margin-top: 25px; */
+  border: 1px solid #f2f2f2;
+  padding: 10rem 0rem;
+
+ 
+  /* background: rgb(205,125,205);
+    background: radial-gradient(circle, rgba(205, 125, 205, 0.209) 0%, rgba(75, 133, 177, 0.074) 89%, rgba(148, 188, 200, 0.249) 100%); */
 }
-.container{
-      width: 80%;
-      margin: auto;
-      border: 1px solid #4116cd;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+.container {
+  width: 80%;
+  margin: auto;
+  /* border: 1px solid #4116cd; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* -------------left start- ------------------------ */
-.leftDiv{
-    width: 50%;
-    /* border: 1px solid #000; */
+.leftDiv {
+  width: 50%;
+  /* border: 1px solid #000; */
 }
 /* -------------left end------------------------- */
 
 /* -------------right start- ------------------------ */
-.rightDdiv{
-    width: 50%;
-    
+.rightDdiv {
+  padding: 1.5rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: flex-start; */
+
+  border-radius: 15px;
+  /* border: 1px solid rgba(0,0,0, 0.28); */
+  width: 40%;
+  /* background: rgba(205, 125, 205, 0.535);
+    background: radial-gradient(
+      circle,
+      rgba(43, 179, 134, 0.02) 30%,
+      rgba(163, 46, 179, 0.022) 79%,
+      rgba(172, 18, 57, 0.02) 100%
+    ); */
 }
-table{
-    /* border: 1px solid #c91313; */
+table {
+  /* border: 1px solid #c91313; */
 }
-tbody tr{
-    display: flex;
-    margin: 1rem 0rem;
-    gap: 5rem;
-    justify-content: space-between;
-    /* border: 1px solid #c91313; */
+tbody tr {
+  /* display: flex; */
+  margin: 1rem 0rem;
+  /* padding: 1rem; */
+  /* gap: 5rem; */
+  /* justify-content: space-between; */
+  /* border: 1px solid #c91313; */
 }
+tbody td {
+  /* display: flex; */
+  /* margin: 1rem 0rem; */
+  padding: 0.7rem 1rem;
+  /* gap: 5rem; */
+  /* justify-content: space-between; */
+  /* border: 1px solid #c91313; */
+}
+
 /* -------------right end------------------------- */
