--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -20,26 +20,51 @@
   /* height: 80px; */
 }
 .project {
-  display: flex;
-  width: 90%;
+  /* display: flex; */
+  width: clamp(90%,100%,110%);
   margin: auto;
 }
-.project:hover h1 {
+/* .project:hover h1 {
   color: rgb(221, 125, 22);
 }
 .project:hover .techDiv {
   color: rgb(221, 125, 22);
-}
+} */
 
 /* -------------left start--------- */
-.left1 {
-  width: 55%;
-}
 .imgDiv {
-  height: 500px;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+}
+.deskImgDiv {
+  border: 4px solid #000;
+  border-radius: 15px;
+  /* height: 600px; */
+  width: 80%;
+  width: clamp(90%,100%,110%);
+
+  overflow: hidden;
+ 
+}
+.deskImgDiv img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.phoneImgDiv {
+  /* height: 450px; */
+  border: 4px solid #000;
+  border-radius: 25px;
+  margin-left: -5rem;
+  width: clamp(20%,30%,40%);
+
+ 
   overflow: hidden;
 }
-.imgDiv img {
+.phoneImgDiv img {
+
   width: 100%;
   height: 100%;
   object-fit: cover;
