--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,16 +1,7 @@
 .contact {
-  display: flex;
-  justify-content: center;
+  /* display: flex; */
+  /* justify-content: center; */
   color: rgb(0, 0, 0);
-  /* border: 1px solid #000; */
-  
-  /* background: rgb(205, 125, 205);
-  background: radial-gradient(
-    circle,
-    rgba(205, 125, 205, 0.209) 0%,
-    rgba(75, 133, 177, 0.074) 89%,
-    rgba(148, 188, 200, 0.249) 100%
-  ); */
   padding: 10rem;
 }
 a {
@@ -23,10 +14,12 @@ a {
   flex-wrap: wrap;
   justify-content: center;
   gap: 25px;
+ /* border: 1px solid #000; */
+
 }
 .card {
   /* width: 240px; */
-  padding: 10px;
+  /* padding: 10px; */
   height: 260px;
   /* border-radius: 10px; */
   display: flex;
@@ -40,9 +33,9 @@ a {
   /* display: flex;
   align-items: center;
   justify-content: center; */
-  width: 320px;
+  width: 300px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  padding: 32px;
+  /* padding: 32px; */
   overflow: hidden;
   border-radius: 10px;
   transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
