--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -12,35 +12,30 @@
   ); */
 }
 .container {
-  position: relative;
-  
-  z-index: 1;
-  font-family: 'Poppins', sans-serif;
-  /* border: 1px solid white; */
+  position: relative; 
+
+  font-family: 'Poppins', sans-serif; 
   margin: auto;
   z-index: 500;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
+  /* flex-wrap: wrap; */
   justify-content: center;
-  width: 90%;
+  width: 85%;
   margin: auto;
-  gap: 2.5rem 1.7rem;
+  gap: 4rem 3rem;
 }
 .container .card
 {
-  position: relative;
-  /* width: 220px; */
-  height: 250px;
-  margin-top: 20px;
-  /* box-shadow: 20px 20px 50px rgba(0,0,0,0.5) ; */
+  position: relative; 
   border-radius: 15px;
-  background: rgba(9, 55, 75, 0.1);
+  /* background: rgba(9, 55, 75, 0.1); */
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid rgba(255,255,255,0.5);
-  /* border-bottom: 1px solid rgba(255,255,255,0.5); */
+  /* border: 1px solid rgba(10, 9, 9, 0.5); */
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   backdrop-filter: blur(5px);
   z-index: 900;
   /* transition: .3s; */
@@ -51,8 +46,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 20px;
-  width: 240px;
+  padding: 10px 20px;
   text-align: center;
   transform: translateY(30px);
   opacity: 1;
@@ -84,17 +78,44 @@
 }
 
 .img {
-  height: 200px;
-  width: 100%;
+  max-height: 90%;
+  min-height: 90%;
+
+  min-width: 90%;
+  max-width: 90%;
   z-index: 1;
   object-fit: cover;
 }
 .name {
-  /* justify-self: flex-end; */
-  /* border: 1px solid #000; */
-  /* height: 25%; */
+ 
 }
 .container .card:hover .skillDiv{
   transform: translateY(0px);
   opacity: 1;
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1250px) {
+  .container {
+    grid-template-columns: repeat(5,1fr);
+
+
+  }
+ 
+}
+@media only screen and (min-width: 700px) and (max-width: 900px) {
+  .container {
+    grid-template-columns: repeat(4,1fr);
+
+  }
+  
+}
+@media only screen and (max-width: 900px) {
+  .container {
+    grid-template-columns: repeat(2,1fr);
+
+  }
+  .skillsContainer{
+    /* padding: 0; */
+  }
+  
 }
