--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -42,6 +42,9 @@
   justify-content: space-between;
 
 }
+.subTitle{
+  opacity: 0.5;
+}
 
 .btnDiv{
   display: flex;
@@ -96,9 +99,9 @@
   transition: all 0.475s;
 }
 .inner1 {
-  padding: 0rem 1rem;
+padding-right: 1rem;
 
-  height: 120px;
+  height: 150px;
   overflow-y: scroll;
   text-align: justify; 
 }
@@ -130,10 +133,21 @@
 }
 
 .description1 {
+ 
+  font-size: 1.2rem;
+}
+.description1 p {
+  margin: 0.1rem 0rem;
+  font: 1.2rem;
 }
 .techDiv {
   display: flex;
   gap: 1rem;
+}
+.techDiv p {
+  border: 1px solid #3332327e;
+  padding: 0.3rem 0.5rem;
+  border-radius: 5px;
 }
 
 /* -------------bottom start--------- */
