--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -38,6 +38,7 @@
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   backdrop-filter: blur(5px);
   z-index: 900;
+  /* max-height: 250px; */
   /* transition: .3s; */
 
 }
@@ -46,11 +47,13 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   text-align: center;
   transform: translateY(30px);
   opacity: 1;
   transition: 0.5s;
+  max-height: 400px;
+  /* border: 1px solid #000; */
 }
 .card:hover  {
   box-shadow: rgba(80, 202, 246, 0.4) 0px 0px 0px 2px, rgba(80, 202, 246, 0.65) 0px 4px 6px -1px, rgba(80, 202, 246, 0.08) 0px 1px 0px inset;
@@ -116,6 +119,10 @@
   }
   .skillsContainer{
     /* padding: 0; */
+  }
+  .skillDiv:hover h3 {
+   font-size: 1rem;
+  
   }
   
 }
