--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -35,13 +35,7 @@
   border-radius: 15px;
   /* border: 1px solid rgba(0,0,0, 0.28); */
   width: 40%;
-  /* background: rgba(205, 125, 205, 0.535);
-    background: radial-gradient(
-      circle,
-      rgba(43, 179, 134, 0.02) 30%,
-      rgba(163, 46, 179, 0.022) 79%,
-      rgba(172, 18, 57, 0.02) 100%
-    ); */
+  
 }
 table {
   /* border: 1px solid #c91313; */
@@ -49,18 +43,55 @@ table {
 tbody tr {
   /* display: flex; */
   margin: 1rem 0rem;
-  /* padding: 1rem; */
-  /* gap: 5rem; */
-  /* justify-content: space-between; */
-  /* border: 1px solid #c91313; */
+  
 }
 tbody td {
-  /* display: flex; */
-  /* margin: 1rem 0rem; */
+
   padding: 0.7rem 1rem;
-  /* gap: 5rem; */
-  /* justify-content: space-between; */
-  /* border: 1px solid #c91313; */
+  
+}
+.button {
+  position: relative;
+  overflow: hidden;
+  height: 2.5rem;
+  padding: 0 1.5rem;
+  border-radius: 1.5rem;
+  background: #ffffff;
+  background-size: 400%;
+  color: #0e0e0e;
+ border: 1px solid #000;
+}
+.button:hover::before {
+
+
+  transform: scaleX(1);
+}
+.buttonContent {
+  position: relative;
+  z-index: 1;
+  font-size: 1.2rem;
+  
+
+}
+.button::before {
+  
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  width: 100%;
+  height: inherit;
+  border-radius: inherit;
+  background: linear-gradient(
+    82.3deg,
+    rgba(150, 93, 233, 1) 10.8%,
+    rgba(99, 88, 238, 1) 94.3%
+  );
+  transition: all 0.475s;
+  
+
 }
 
 /* -------------right end------------------------- */
