--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -3,13 +3,7 @@
   margin-top: 25px;
   /* border: 1px solid #f2f2f2; */
   padding: 10rem 0rem;
-  background: rgb(205, 125, 205);
-  background: radial-gradient(
-    circle,
-    rgba(205, 125, 205, 0.209) 0%,
-    rgba(75, 133, 177, 0.074) 89%,
-    rgba(148, 188, 200, 0.249) 100%
-  );
+  background-color: #ffffff;
 }
 .container {
   width: 80%;
@@ -20,6 +14,9 @@
   align-items: center;
 }
 
+.right_div{
+  text-align: end;
+}
 /* -------------left start- ------------------------ */
 .animated_text {
   margin: 2rem 0rem;
@@ -31,7 +28,7 @@
 
 /* -------------right start- ------------------------ */
 .home_img {
-  width: 80%;
+  width: 90%;
   border-radius: 20px;
 }
 /* -------------right end------------------------- */
