--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -18,6 +18,7 @@
   /* display: flex; */
   width: 80%;
   margin: auto;
+  margin-top: 8rem;
 }
 .dot{
    background-color: #000;
@@ -62,42 +63,7 @@
   /* border: 1px solid #000; */
 
 }
-.button {
-  position: relative;
-  overflow: hidden;
-  height: 2.5rem;
-  padding: 0 1.5rem;
-  border-radius: 1.5rem;
-  background: #ffffff;
-  background-size: 400%;
-  color: #0e0e0e;
- border: 1px solid #000;
-}
-.button:hover::before {
-  transform: scaleX(1);
-}
-.buttonContent {
-  position: relative;
-  z-index: 1;
-  font-size: 1.2rem;
-}
-.button::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: scaleX(0);
-  transform-origin: 0 50%;
-  width: 100%;
-  height: inherit;
-  border-radius: inherit;
-  background: linear-gradient(
-    82.3deg,
-    rgba(150, 93, 233, 1) 10.8%,
-    rgba(99, 88, 238, 1) 94.3%
-  );
-  transition: all 0.475s;
-}
+ 
 .inner1 {
 padding-right: 1rem;
 
@@ -113,6 +79,49 @@ padding-right: 1rem;
 .inner1::-webkit-scrollbar-thumb {
   background: rgb(13, 165, 230);
   border-radius: 20px;
+}
+.button {
+  position: relative;
+  overflow: hidden;
+  height: 2.5rem;
+  padding: 0 1.5rem;
+  border-radius: 1.5rem;
+  background: #ffffff;
+  background-size: 400%;
+  color: #0e0e0e;
+ border: 1px solid #000;
+}
+.button:hover::before {
+
+
+  transform: scaleX(1);
+}
+.buttonContent {
+  position: relative;
+  z-index: 1;
+  font-size: 1.2rem;
+  
+
+}
+.button::before {
+  
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  width: 100%;
+  height: inherit;
+  border-radius: inherit;
+  background: linear-gradient(
+    82.3deg,
+    rgba(150, 93, 233, 1) 10.8%,
+    rgba(99, 88, 238, 1) 94.3%
+  );
+  transition: all 0.475s;
+  
+
 }
 
 /* -------------top end--------- */
