--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -3,19 +3,13 @@
   /* margin-top: 25px; */
   border: 1px solid #f2f2f2;
   padding: 10rem 0rem;
-  /* background: rgb(205, 125, 205);
-  background: radial-gradient(
-    circle,
-    rgba(205, 125, 205, 0.145) 0%,
-    rgba(75, 133, 177, 0.074) 89%,
-    rgba(148, 188, 200, 0.249) 100%
-  ); */
+  
 }
 .container {
   position: relative; 
 
   font-family: 'Poppins', sans-serif; 
-  margin: auto;
+
   z-index: 500;
   display: grid;
   grid-template-columns: repeat(6,1fr);
@@ -23,6 +17,7 @@
   justify-content: center;
   width: 85%;
   margin: auto;
+  margin-top: 8rem;
   gap: 4rem 3rem;
 }
 .container .card
@@ -81,11 +76,11 @@
 }
 
 .img {
-  max-height: 90%;
-  min-height: 90%;
+  max-height: 80%;
+  min-height: 80%;
 
-  min-width: 90%;
-  max-width: 90%;
+  min-width: 80%;
+  max-width: 80%;
   z-index: 1;
   object-fit: cover;
 }
