--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,8 +1,9 @@
-#home {
+.home {
   color: rgb(5, 5, 5);
-  margin-top: 25px;
+  /* margin-top: 25px; */
   /* border: 1px solid #f2f2f2; */
-  padding: 10rem 0rem;
+  height: 100vh;
+  padding: 8rem 0rem;
   background-color: #ffffff;
 }
 .container {
