--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -2,7 +2,7 @@
   /* display: flex; */
   /* justify-content: center; */
   color: rgb(0, 0, 0);
-  padding: 10rem;
+  padding: 0rem 0rem 8rem 0rem;
 }
 a {
   text-decoration: none;
@@ -71,7 +71,9 @@ a {
   bottom: 0;
   width: 100%;
   height: 5px;
-  background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100%);
+  background: linear-gradient(-45deg, #09a9ffdd 0%, #9379e198 100%);
+
+  /* background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100%); */
   z-index: -1;
   transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
 }
