--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -5,7 +5,6 @@
 
   padding: 10rem 0rem;
 
- 
   /* background: rgb(205,125,205);
     background: radial-gradient(circle, rgba(205, 125, 205, 0.209) 0%, rgba(75, 133, 177, 0.074) 89%, rgba(148, 188, 200, 0.249) 100%); */
 }
@@ -23,6 +22,14 @@
   width: 50%;
   /* border: 1px solid #000; */
 }
+
+.back_div {
+  border: 1px solid #17b7c3;
+  max-width: fit-content;
+  border-radius: 10px;
+  border-radius: 5px;
+}
+
 /* -------------left end------------------------- */
 
 /* -------------right start- ------------------------ */
@@ -36,7 +43,6 @@
   border-radius: 15px;
   /* border: 1px solid rgba(0,0,0, 0.28); */
   width: 40%;
-  
 }
 table {
   /* border: 1px solid #c91313; */
@@ -44,14 +50,23 @@ table {
 tbody tr {
   /* display: flex; */
   margin: 1rem 0rem;
-  
 }
 tbody td {
-
   padding: 0.7rem 1rem;
-  
+}
+.btn_back_div {
+  border-radius: 5px;
+  max-width: fit-content;
+
+  background-color: #17b7c3;
 }
 .button {
+  border: 1px solid #17b7c3;
+  background: white;
+  padding: 0.7rem 1.5rem;
+  border-radius: 5px;
+}
+/* .button {
   position: relative;
   overflow: hidden;
   height: 2.5rem;
@@ -60,23 +75,18 @@ tbody td {
   background: #ffffff;
   background-size: 400%;
   color: #0e0e0e;
- border: 1px solid #000;
+  border: 1px solid #000;
 }
 .button:hover::before {
-
-
   transform: scaleX(1);
 }
 .buttonContent {
   position: relative;
   z-index: 1;
   font-size: 1.2rem;
-  
-
 }
 .button::before {
-  
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -91,31 +101,24 @@ tbody td {
     rgba(99, 88, 238, 1) 94.3%
   );
   transition: all 0.475s;
-  
-
-}
+} */
 
 /* -------------right end------------------------- */
-
 
 @media only screen and (min-width: 900px) and (max-width: 1250px) {
   .container {
     flex-direction: column;
-
   }
- 
 }
 @media only screen and (min-width: 700px) and (max-width: 900px) {
   .container {
     width: 100%;
     flex-direction: column;
   }
-  
 }
 @media only screen and (max-width: 900px) {
   .container {
     width: 100%;
     flex-direction: column;
   }
-  
 }
