--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,9 +1,9 @@
-#nav_menu {
+.nav_menu {
   border-bottom: 1px solid rgba(255, 255, 255, 0.651);
   margin-bottom: 4rem;
   background-color: #1b2641;
 }
-#nav_menu a {
+.nav_menu a {
   /* background-color: #0f172a; */
   color: #e2e8f0;
 }
