--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -25,7 +25,8 @@
 
 .back_div {
   border: 1px solid #17b7c3;
-  max-width: fit-content;
+  width: max-content;
+  max-width: max-content;
   border-radius: 10px;
   border-radius: 5px;
 }
@@ -54,8 +55,10 @@ tbody tr {
 tbody td {
   padding: 0.7rem 1rem;
 }
-.btn_back_div {
+/* .btn_back_div {
   border-radius: 5px;
+  width: fit-content;
+
   max-width: fit-content;
 
   background-color: #17b7c3;
@@ -65,7 +68,7 @@ tbody td {
   background: white;
   padding: 0.7rem 1.5rem;
   border-radius: 5px;
-}
+} */
 /* .button {
   position: relative;
   overflow: hidden;
@@ -120,5 +123,22 @@ tbody td {
   .container {
     width: 100%;
     flex-direction: column;
+  }
+}
+@media only screen and (max-width: 455px) {
+  
+  .container {
+     flex-direction: column;
+    gap: 1rem 0rem;
+    align-items: center;
+  }
+  .leftDiv img{
+    max-width: 250px;
+    /* border: 1px solid #000; */
+  }
+  .rightDdiv {
+    padding: 0rem 0rem;
+  
+    width: 90%;
   }
 }
