--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -15,7 +15,7 @@
   align-items: center;
 }
 
-.right_div{
+.right_div {
   text-align: end;
 }
 /* -------------left start- ------------------------ */
@@ -33,3 +33,13 @@
   border-radius: 20px;
 }
 /* -------------right end------------------------- */
+
+@media only screen and (max-width: 455px) {
+  .home {
+  padding: 4rem 0rem;
+  }
+  .container {
+     flex-direction: column;
+    gap: 1rem 0rem;
+  }
+}
