--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
   color: black;
   
 }
+html{
+  /* scroll-behavior: smooth; */
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
