--- a/src/styles/contact.module.css
+++ b/src/styles/contact.module.css
@@ -1,7 +1,9 @@
 .contact {
   /* display: flex; */
   /* justify-content: center; */
-  color: rgb(0, 0, 0);
+  width: 100%;
+  overflow: hidden;
+  /* color: rgb(0, 0, 0); */
   padding: 0rem 0rem 8rem 0rem;
   /* border: 1px solid #000; */
 }
