--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,7 +1,7 @@
 .home {
   color: rgb(5, 5, 5);
   /* margin-top: 25px; */
-  /* border: 1px solid #f2f2f2; */
+  border: 1px solid #332f2f;
   height: 100vh;
   padding: 8rem 0rem;
   background-color: #ffffff;
