--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-color: #1b2641; */
-  color: black;
-  
+  font-family: 'Poppins', sans-serif;
+
 }
-html{
-  /* scroll-behavior: smooth; */
+body::-webkit-scrollbar{
+  width: 10px;
+}
+body::-webkit-scrollbar-thumb{
+  background: #4dbdfa;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  animation: gradient 15s ease infinite;
+  border-radius: 50px;
+}
+body::-webkit-scrollbar-track{
+  background: #6d6a6a;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
 }
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+/* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+} */
 .sectionHeading {
   font-size: clamp(32px, 10vw, 128px);
   font-size: 3.125rem;
@@ -32,7 +57,7 @@ code {
 }
 .sectionHeading::before {
   content: attr(data-outline);
-  
+
   position: absolute;
   left: 1%;
   font-size: 3rem;
@@ -47,6 +72,6 @@ code {
   /* color: #1a1a1a; */
   color: #09a9ff;
   opacity: 20%;
-  -webkit-text-stroke: .0938rem #e8e6ee2f;
+  -webkit-text-stroke: 0.0938rem #e8e6ee2f;
   z-index: 2;
 }
