--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -1,8 +1,9 @@
 .about2 {
   color: rgb(0, 0, 0);
   /* margin-top: 25px; */
-  border: 1px solid #f2f2f2;
-
+  /* border: 1px solid #3a3636; */
+  width: 100%;
+  overflow: hidden;
   padding: 10rem 0rem;
 
   /* background: rgb(205,125,205);
