--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Poppins', sans-serif;
@@ -43,11 +43,12 @@ html {
     monospace;
 } */
 .sectionHeading {
-  font-size: clamp(32px, 10vw, 128px);
+  /* font-size: clamp(32px, 10vw, 128px); */
+  /* font-weight: inherit; */
   font-size: 3.125rem;
   color: #2979a3;
   text-transform: uppercase;
-  font-family: "Montserrat";
+  /* font-family: "Montserrat"; */
   letter-spacing: 3.2px;
   text-align: center;
   position: relative;
@@ -65,7 +66,7 @@ html {
   width: 100%;
   text-align: center;
   text-transform: uppercase;
-  font-family: "Montserrat";
+  /* font-family: "Montserrat"; */
   font-weight: 800;
   /* letter-spacing: 3.2px; */
   /* color: transparent; */
