--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -56,56 +56,7 @@ tbody tr {
 tbody td {
   padding: 0.7rem 1rem;
 }
-/* .btn_back_div {
-  border-radius: 5px;
-  width: fit-content;
 
-  max-width: fit-content;
-
-  background-color: #17b7c3;
-}
-.button {
-  border: 1px solid #17b7c3;
-  background: white;
-  padding: 0.7rem 1.5rem;
-  border-radius: 5px;
-} */
-/* .button {
-  position: relative;
-  overflow: hidden;
-  height: 2.5rem;
-  padding: 0 1.5rem;
-  border-radius: 1.5rem;
-  background: #ffffff;
-  background-size: 400%;
-  color: #0e0e0e;
-  border: 1px solid #000;
-}
-.button:hover::before {
-  transform: scaleX(1);
-}
-.buttonContent {
-  position: relative;
-  z-index: 1;
-  font-size: 1.2rem;
-}
-.button::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform: scaleX(0);
-  transform-origin: 0 50%;
-  width: 100%;
-  height: inherit;
-  border-radius: inherit;
-  background: linear-gradient(
-    82.3deg,
-    rgba(150, 93, 233, 1) 10.8%,
-    rgba(99, 88, 238, 1) 94.3%
-  );
-  transition: all 0.475s;
-} */
 
 /* -------------right end------------------------- */
 
@@ -130,16 +81,22 @@ tbody td {
   
   .container {
      flex-direction: column;
-    gap: 1rem 0rem;
+    gap: 2rem 0rem;
     align-items: center;
+  }
+  .leftDiv {
+   text-align: center;
   }
   .leftDiv img{
     max-width: 250px;
+
     /* border: 1px solid #000; */
   }
   .rightDdiv {
     padding: 0rem 0rem;
-  
+    /* text-align: center; */
+   /* margin: auto; */
+   /* border: 1px solid #000; */
     width: 90%;
   }
 }
