--- a/src/styles/github.module.css
+++ b/src/styles/github.module.css
@@ -1,8 +1,10 @@
 .github {
   margin: 10rem 0rem;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
+  /* padding: 1rem; */
+  /* display: flex; */
+  /* justify-content: center; */
+  width: 100%;
+  overflow: hidden;
   /* border: 1px solid #dc1010; */
 }
 .container {
