--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,7 +1,7 @@
 .nav_menu {
   border-bottom: 1px solid rgba(255, 255, 255, 0.651);
   margin-bottom: 4rem;
-  background-color: #1b2641;
+  background-color: #0f223f;
 }
 .nav_menu a {
   /* background-color: #0f172a; */
