--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -99,31 +99,72 @@
   opacity: 1;
 }
 
-@media only screen and (min-width: 900px) and (max-width: 1250px) {
+@media only screen and (min-width: 1250px) and (max-width: 1550px) {
   .container {
+    width: 90%;
+  gap: 4rem 2rem;
+
+    /* grid-template-columns: repeat(5,1fr); */
+
+  } 
+}
+@media only screen and (min-width: 1100px) and (max-width: 1250px) {
+  .container {
+    width: 90%;
+
     grid-template-columns: repeat(5,1fr);
 
-
-  }
- 
+  } 
 }
-@media only screen and (min-width: 700px) and (max-width: 900px) {
+
+@media only screen and (min-width: 850px) and (max-width: 1100px) {
   .container {
+    width: 90%;
+
     grid-template-columns: repeat(4,1fr);
 
   }
   
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (min-width: 700px) and (max-width: 850px) {
   .container {
-    grid-template-columns: repeat(2,1fr);
+    width: 90%;
+
+    grid-template-columns: repeat(3,1fr);
 
   }
+  
+}
+@media only screen and (min-width: 555px) and (max-width: 700px) {
+  .container {
+    width: 90%;
+
+    grid-template-columns: repeat(3,1fr);
+     gap: 3rem 2rem;
+     
+  }
+  
+}
+@media only screen and (min-width: 455px) and (max-width: 555px) {
+  .container {
+    width: 90%;
+
+    grid-template-columns: repeat(2,1fr);
+     gap: 3rem 2rem;
+     
+  }
+  
+}
+@media only screen and (max-width: 900px) {
+  /* .container {
+    grid-template-columns: repeat(2,1fr);
+
+  } */
   .skillsContainer{
     /* padding: 0; */
   }
   .skillDiv:hover h3 {
-   font-size: 1rem;
+   font-size: 2rem;
   
   }
   
@@ -132,7 +173,7 @@
   .container {
     width: 90%;
     grid-template-columns: repeat(2,1fr);
-     gap: 2.5rem 1rem;
+     gap: 2.5rem 1.2rem;
   }
   .skillDiv:hover h3 {
     font-size: 2rem;
