--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -188,30 +188,57 @@
 }
 /* -------------bottom end--------- */
 
-@media only screen and (min-width: 900px) and (max-width: 1250px) {
+@media only screen and (min-width: 960px) and (max-width: 1250px) {
   .container {
     width: 100%;
   }
   .project {
     /* display: flex; */
-    width: 90%;
+    width: 100%;
+  }
+  
+}
+@media only screen and (min-width: 960px) and (max-width: 1095px) {
+  
+  .project {
+    /* display: flex; */
+    width: 100%;
+  }
+  .contentLeft {
+    /* border: 1px solid #000; */
+    width: 45%;
+    
+  }
+  .contentRight {
+    width: 55%;
+    
   }
 }
-@media only screen and (min-width: 700px) and (max-width: 900px) {
+@media only screen and (min-width: 700px) and (max-width: 960px) {
   .container {
     width: 100%;
   }
+  
   .project {
     /* display: flex; */
     width: 100%;
+    /* border: 1px solid #000; */
   }
   .projects {
     padding: 1rem;
+    /* border: 1px solid #000; */
   }
   .content {
     flex-direction: column;
-    /* border: 1px solid #000;
-     */
+    /* border: 1px solid #000; */
+    align-items: center;
+    
+  }
+  .imgDiv{
+     justify-content: center;
+  }
+  .contentLeft{
+    width: 90%;
   }
   .contentRight {
     width: 90%;
@@ -231,8 +258,15 @@
   }
   .content {
     flex-direction: column;
-    /* border: 1px solid #000;
-     */
+    /* border: 1px solid #000; */
+    align-items: center;
+    
+  }
+  .imgDiv{
+     justify-content: center;
+  }
+  .contentLeft{
+    width: 90%;
   }
   .contentRight {
     width: 90%;
