--- a/src/styles/github.module.css
+++ b/src/styles/github.module.css
@@ -15,7 +15,6 @@
   gap: 2rem;
   align-items: center;
   margin-top: 8rem;
-
 }
 .container img {
   width: 100%;
@@ -24,8 +23,28 @@
   display: flex;
   gap: 1rem;
 }
+.top img {
+  height: 210px;
+}
 @media only screen and (max-width: 900px) {
   .top {
     flex-direction: column;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .container {
+    width: 90%;
+    margin: auto;
+  }
+}
+@media only screen and (max-width: 455px) {
+  .top {
+    gap: 0.5rem 0rem;
+  }
+  .top img {
+    height: 180px;
+  }
+  .top > div{
+    width: 100%;
   }
 }
