--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -42,28 +42,50 @@
 /* -------------right end------------------------- */
 
 @media only screen and (min-width: 1000px) and (max-width: 1430px) {
-  .container{
+  .container {
     width: 85%;
     /* padding: 4rem 0rem; */
-  
-    
   }
-  .container div{
-      /* border: 1px solid #000; */
+  .container div {
+    /* border: 1px solid #000; */
   }
 }
-@media only screen and (max-width: 1430px) {
-  .home{
 
-  }
-  
-}
-@media only screen and (max-width: 455px) {
+@media only screen and (min-width: 455px) and (max-width: 850px) {
   .home {
-  padding: 4rem 0rem;
+    padding: 4rem 0rem 4rem 0rem;
   }
   .container {
-     flex-direction: column;
+    flex-direction: column;
     gap: 1rem 0rem;
+    width: 90%;
+    /* border: 1px solid #000; */
+  }
+  .left_div {
+    width: 100%;
+    /* border: 1px solid #000; */
+  }
+  .right_div {
+    width: 70%;
+  }
+}
+@media only screen and (min-width: 455px) and (max-width: 685px) {
+  .right_div {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 455px) {
+  .home {
+    padding: 0;
+    /* border: 1px solid #000; */
+  }
+  .container {
+    flex-direction: column;
+    gap: 1rem 0rem;
+    width: 95%;
+  }
+  .right_div {
+    width: 95%;
   }
 }
