--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -42,6 +42,9 @@
   flex-direction: column;
   justify-content: space-between;
 }
+.contentLeft h1 span {
+ color:#54bdc7 ;
+}
 .subTitle {
   opacity: 0.5;
 }
